--- a/.gitignore
+++ b/.gitignore
@@ -5,17 +5,6 @@
 *.mat
 *.asv
 path
-getCandidateFrames.m
-getSignature.m
-keyf.m
-text_ocr_test.m
-2538-5_70133_avi/*
-2538-5_70133_avi_results/*
-DDSports/*
-ESPN/*
-SonySix/*
-TenSports/*
+MiscData/*
 TestData/*
-football/*
-football_mp4_results/*
 dbFramework/*
